# wanderers-tarot

./: .env  .gitignore  .replit  README.md  Template.html  __init__.py  cardsjson.py  edit_cards.py  ginit.sh  installdependants.sh  past_readings.json  pyproject.toml  replit.nix  run_tarot.py  scratch  serialize.py  setupcards.py  tarot.py  tarot_deck.json  test.html  wanderers.kv  wanderersapp.py  wt.kv  wt2.css
html/: untitled.txt
html/wt/: Template.html  read.html
img/: ..b64  .death.b64  .justice.b64  .strength.b64  .temperance.b64  .the_chariot.b64  .the_devil.b64  .the_emperor.b64  .the_empress.b64  .the_fool.b64  .the_hanged_man.b64  .the_hermit.b64  .the_hierophant.b64  .the_high_priestess.b64  .the_lovers.b64  .the_magician.b64  .the_moon.b64  .the_star.b64  .the_sun.b64  .the_tower.b64  .the_world.b64  .wheel_of_fortune.b64
src/: __init__.py  __priv__.py  geminiRequest.py  page_creator.py  past_readings.json  serialize.py  tarot.py  tarot_deck.json  test.html  textPrompt.py
src/readings/: reading.json  reading_07112024_1047.txt
