[tool.poetry]
name = "wanderers-tarot"
version = "0.1.0"
description = ""
authors = ["Magick <fatheranarchy@programmer.net>"]
readme = "README.md"
packages = [{include = "wanderers_tarot"}]

[tool.poetry.dependencies]
python = "^3.12"
image-processing-ge = "0.2"
google-generativeai = "0.7.2"
airium = "0.2.6"
pillow = "10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
